--- a/templates/config-onokom-air-ht-1-mb-b.json
+++ b/templates/config-onokom-air-ht-1-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-DK-1-MB-B",
+    "device_type": "ONOKOM-AIR-HT-1-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "DK-1-MB-B"
+            "signature": "HT-1-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-DK-1-MB-B",
-        "id": "ONOKOM-AIR-DK-1-MB-B",
+        "name": "ONOKOM-AIR-HT-1-MB-B",
+        "id": "ONOKOM-AIR-HT-1-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -20,21 +20,6 @@
                 "title": "Temperature control",
                 "id": "temperatureControl",
                 "order": 2
-            },
-            {
-                "title": "Vanes",
-                "id": "vanes",
-                "order": 3
-            },
-            {
-                "title": "Additional",
-                "id": "additional",
-                "order": 4
-            },
-            {
-                "title": "Indication",
-                "id": "indication",
-                "order": 5
             },
             {
                 "title": "HW Info",
@@ -48,86 +33,6 @@
             }
         ],
         "parameters": [
-            {
-                "id": "Allow_the_use_of_an_external_temperature_sensor",
-                "title": "Allow the use of an external temperature sensor",
-                "address": 100,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "temperatureControl",
-                "order": 1
-            },
-            {
-                "id": "Show_modes_as_range",
-                "title": "Show modes as range",
-                "address": 95,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "general",
-                "order": 1
-            },
-            {
-                "id": "Show_fan_as_range",
-                "title": "Show fan as range",
-                "address": 92,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "general",
-                "order": 1
-            },
-            {
-                "id": "Show_vanes_as_range",
-                "title": "Show vanes as range",
-                "address": 94,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "vanes",
-                "order": 1
-            },
-            {
-                "id": "Show_thermostat_state_as_range",
-                "title": "Show thermostat state as range",
-                "address": 94,
-                "reg_type": "coil",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "No",
-                    "Yes"
-                ],
-                "group": "temperatureControl",
-                "order": 1
-            },
             {
                 "id": "baud_rate",
                 "title": "Baud rate",
@@ -148,26 +53,6 @@
                     "38400",
                     "57600",
                     "115200"
-                ],
-                "group": "hw_info",
-                "order": 1
-            },
-            {
-                "id": "parity_bit",
-                "title": "Parity bit",
-                "description": "parity_bit_description",
-                "address": 111,
-                "reg_type": "holding",
-                "enum": [
-                    0,
-                    1,
-                    2
-                ],
-                "default": 0,
-                "enum_titles": [
-                    "none (N)",
-                    "odd (O)",
-                    "even (E)"
                 ],
                 "group": "hw_info",
                 "order": 1
@@ -276,24 +161,20 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 5,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
                     1,
                     2,
-                    3,
-                    4,
-                    5
+                    3
                 ],
                 "enum_titles": [
                     "Auto",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -304,7 +185,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 6,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -316,28 +197,20 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
-                    1,
                     2,
                     3,
-                    4,
-                    5,
-                    6,
-                    7
+                    4
                 ],
                 "enum_titles": [
                     "Auto",
-                    "Quiet mode",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed",
-                    "Turbo mode"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -367,19 +240,6 @@
                 "group": "temperatureControl",
                 "units": "deg C",
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
-            },
-            {
-                "name": "Outdoor air temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 4,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
             },
             {
                 "name": "Target temperature",
@@ -427,174 +287,6 @@
                 ],
                 "readonly": true,
                 "condition": "Show_thermostat_state_as_range!=1"
-            },
-            {
-                "name": "Horizontal vanes",
-                "reg_type": "holding",
-                "address": 9,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Horizontal vanes",
-                "reg_type": "holding",
-                "address": 9,
-                "type": "value",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "value",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vanes swing",
-                "reg_type": "holding",
-                "address": 11,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 3,
-                "sporadic": false,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vanes swing",
-                "reg_type": "holding",
-                "address": 11,
-                "type": "value",
-                "format": "u16",
-                "sporadic": false,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1,
-                    2,
-                    3
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Horizontal and vertical swing",
-                    "Swinging horizontal blinds",
-                    "Swinging vertical blinds"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Quiet mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 4,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Eco mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 6,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Turbo mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 7,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Screen light",
-                "reg_type": "coil",
-                "address": 2,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Screen low bright",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 3,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Target fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 31,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
-            },
-            {
-                "name": "Current fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 32,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
             },
             {
                 "name": "Temeperature correction",
@@ -705,17 +397,16 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Adapter for household Daikin systems)"
+                "template_title": "ONOKOM AIR HT-1-MB-B (Adapter for household Hitachi systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Адаптер для бытовых систем Daikin)",
+                "template_title": "ONOKOM AIR HT-1-MB-B (Адаптер для бытовых систем Hitachi)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
                 "Active mode": "Состояние и режим",
                 "Fan speed": "Скорость вентилятора",
                 "Smart fan speed": "Скорость вентилятора расширенная",
-                "Show modes as range": "Отображать режимы как ползунок",
                 "Off": "Выключен",
                 "Heat": "Нагрев",
                 "Cool": "Охлаждение",
@@ -726,41 +417,14 @@
                 "Heating": "Нагрев",
                 "Cooling": "Охлаждение",
                 "Temperature control": "Контроль температуры",
-                "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Outdoor air temperature": "Температура воздуха на улице",
                 "Target temperature": "Целевая температура",
-                "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
-                "Vanes": "Жалюзи",
-                "Show vanes as range": "Отображать жалюзи как ползунок",
-                "Horizontal vanes": "Горизонтальные жалюзи",
-                "Swing": "Качание",
-                "Vertical vanes": "Вертикальные жалюзи",
-                "Vanes swing": "Качание жалюзи",
-                "Stop": "Остановлены",
-                "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
-                "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
-                "Swinging vertical blinds": "Качание вертикальных жалюзи",
-                "Show fan as range": "Отображать вентилятор как ползунок",
-                "Additional": "Дополнительные режимы и функции",
                 "1 Speed": "1 Скорость",
                 "2 Speed": "2 Скорость",
                 "3 Speed": "3 Скорость",
-                "4 Speed": "4 Скорость",
-                "5 Speed": "5 Скорость",
-                "Quiet mode": "Режим тихий",
-                "Eco mode": "Режим эко",
-                "Turbo mode": "Режим турбо",
-                "Indication": "Индикация",
-                "Screen light": "Подсветка экрана",
-                "Screen low bright": "Ослабить яркость экрана",
-                "No": "Нет",
-                "Yes": "Да",
                 "Baud rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
-                "Parity bit": "Бит чётности",
-                "parity_bit_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный бит четности, сохраните конфигурацию, а затем укажите в настройках порта этот же бит четности.",
                 "HW Info": "Данные модуля",
                 "HW Version": "Версия устройства",
                 "FW Version": "Версия прошивки",
@@ -771,8 +435,6 @@
                 "Serial": "Серийный номер",
                 "Reboot Device": "Перезагрузить устройство",
                 "Debug": "Диагностика",
-                "Target fan speed": "Целевая скорость вентилятора",
-                "Current fan speed": "Текущая скорость вентилятора",
                 "Temeperature correction": "Коррекция температуры",
                 "AC connected": "Кондиционер подключен"
             }
