--- a/templates/config-onokom-air-md-1-mb-b.json
+++ b/templates/config-onokom-air-md-1-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-DK-1-MB-B",
+    "device_type": "ONOKOM-AIR-MD-1-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "DK-1-MB-B"
+            "signature": "MD-1-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-DK-1-MB-B",
-        "id": "ONOKOM-AIR-DK-1-MB-B",
+        "name": "ONOKOM-AIR-MD-1-MB-B",
+        "id": "ONOKOM-AIR-MD-1-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -30,11 +30,6 @@
                 "title": "Additional",
                 "id": "additional",
                 "order": 4
-            },
-            {
-                "title": "Indication",
-                "id": "indication",
-                "order": 5
             },
             {
                 "title": "HW Info",
@@ -369,26 +364,13 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Outdoor air temperature",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 4,
-                "type": "value",
-                "format": "s16",
-                "scale": 0.01,
-                "sporadic": true,
-                "group": "temperatureControl",
-                "readonly": true,
-                "units": "deg C"
-            },
-            {
                 "name": "Target temperature",
                 "reg_type": "holding",
                 "address": 5,
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 32,
+                "max": 30,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -536,15 +518,6 @@
                 "group": "additional"
             },
             {
-                "name": "Eco mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 6,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
                 "name": "Turbo mode",
                 "enabled": false,
                 "reg_type": "coil",
@@ -554,46 +527,16 @@
                 "group": "additional"
             },
             {
-                "name": "Screen light",
-                "reg_type": "coil",
-                "address": 2,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Screen low bright",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 3,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
                 "name": "Target fan speed",
                 "enabled": false,
                 "reg_type": "holding",
                 "address": 31,
                 "type": "range",
                 "min": 0,
-                "max": 200,
+                "max": 100,
                 "sporadic": true,
                 "group": "debug",
-                "readonly": true,
-                "units": "rpm"
-            },
-            {
-                "name": "Current fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 32,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
+                "readonly": false,
                 "units": "rpm"
             },
             {
@@ -705,10 +648,10 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Adapter for household Daikin systems)"
+                "template_title": "ONOKOM AIR MD-1-MB-B (Adapter for household MDV systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Адаптер для бытовых систем Daikin)",
+                "template_title": "ONOKOM AIR MD-1-MB-B (Адаптер для бытовых систем MDV)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
@@ -728,7 +671,6 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Outdoor air temperature": "Температура воздуха на улице",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -750,11 +692,7 @@
                 "4 Speed": "4 Скорость",
                 "5 Speed": "5 Скорость",
                 "Quiet mode": "Режим тихий",
-                "Eco mode": "Режим эко",
                 "Turbo mode": "Режим турбо",
-                "Indication": "Индикация",
-                "Screen light": "Подсветка экрана",
-                "Screen low bright": "Ослабить яркость экрана",
                 "No": "Нет",
                 "Yes": "Да",
                 "Baud rate": "Скорость обмена",
@@ -772,7 +710,6 @@
                 "Reboot Device": "Перезагрузить устройство",
                 "Debug": "Диагностика",
                 "Target fan speed": "Целевая скорость вентилятора",
-                "Current fan speed": "Текущая скорость вентилятора",
                 "Temeperature correction": "Коррекция температуры",
                 "AC connected": "Кондиционер подключен"
             }
