--- a/templates/config-onokom-air-md-3-mb-b.json
+++ b/templates/config-onokom-air-md-3-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-DK-1-MB-B",
+    "device_type": "ONOKOM-AIR-MD-3-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "DK-1-MB-B"
+            "signature": "MD-3-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-DK-1-MB-B",
-        "id": "ONOKOM-AIR-DK-1-MB-B",
+        "name": "ONOKOM-AIR-MD-3-MB-B",
+        "id": "ONOKOM-AIR-MD-3-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -30,11 +30,6 @@
                 "title": "Additional",
                 "id": "additional",
                 "order": 4
-            },
-            {
-                "title": "Indication",
-                "id": "indication",
-                "order": 5
             },
             {
                 "title": "HW Info",
@@ -264,7 +259,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 5,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -276,24 +271,20 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 5,
+                "max": 3,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
                     1,
                     2,
-                    3,
-                    4,
-                    5
+                    3
                 ],
                 "enum_titles": [
                     "Auto",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -304,7 +295,7 @@
                 "type": "range",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 5,
                 "sporadic": true,
                 "group": "general",
                 "condition": "Show_fan_as_range==1"
@@ -316,28 +307,20 @@
                 "type": "value",
                 "format": "u16",
                 "min": 0,
-                "max": 7,
+                "max": 4,
                 "sporadic": true,
                 "group": "general",
                 "enum": [
                     0,
-                    1,
                     2,
                     3,
-                    4,
-                    5,
-                    6,
-                    7
+                    4
                 ],
                 "enum_titles": [
                     "Auto",
-                    "Quiet mode",
                     "1 Speed",
                     "2 Speed",
-                    "3 Speed",
-                    "4 Speed",
-                    "5 Speed",
-                    "Turbo mode"
+                    "3 Speed"
                 ],
                 "condition": "Show_fan_as_range!=1"
             },
@@ -369,10 +352,23 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Outdoor air temperature",
+                "name": "Indoor heat exchanger temperature",
                 "enabled": false,
                 "reg_type": "holding",
-                "address": 4,
+                "address": 23,
+                "type": "value",
+                "format": "s16",
+                "scale": 0.01,
+                "sporadic": true,
+                "group": "temperatureControl",
+                "readonly": true,
+                "units": "deg C"
+            },
+            {
+                "name": "Outdoor heat exchanger temperature",
+                "enabled": false,
+                "reg_type": "holding",
+                "address": 24,
                 "type": "value",
                 "format": "s16",
                 "scale": 0.01,
@@ -388,7 +384,7 @@
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 32,
+                "max": 30,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -434,8 +430,8 @@
                 "address": 9,
                 "type": "range",
                 "format": "u16",
-                "min": 0,
-                "max": 1,
+                "min": 1,
+                "max": 8,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -444,38 +440,6 @@
                 "name": "Horizontal vanes",
                 "reg_type": "holding",
                 "address": 9,
-                "type": "value",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "enum": [
-                    0,
-                    1
-                ],
-                "enum_titles": [
-                    "Stop",
-                    "Swing"
-                ],
-                "condition": "Show_vanes_as_range!=1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
-                "type": "range",
-                "format": "u16",
-                "min": 0,
-                "max": 1,
-                "sporadic": true,
-                "group": "vanes",
-                "condition": "Show_vanes_as_range==1"
-            },
-            {
-                "name": "Vertical vanes",
-                "reg_type": "holding",
-                "address": 10,
                 "type": "value",
                 "format": "u16",
                 "min": 0,
@@ -527,74 +491,14 @@
                 "condition": "Show_vanes_as_range!=1"
             },
             {
-                "name": "Quiet mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 4,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
                 "name": "Eco mode",
                 "enabled": false,
                 "reg_type": "coil",
                 "address": 6,
                 "type": "switch",
                 "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Turbo mode",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 7,
-                "type": "switch",
-                "sporadic": true,
-                "group": "additional"
-            },
-            {
-                "name": "Screen light",
-                "reg_type": "coil",
-                "address": 2,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Screen low bright",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 3,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Target fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 31,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
-            },
-            {
-                "name": "Current fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 32,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
+                "group": "additional",
+                "readonly": true
             },
             {
                 "name": "Temeperature correction",
@@ -705,10 +609,10 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Adapter for household Daikin systems)"
+                "template_title": "ONOKOM AIR MD-3-MB-B (Adapter for semi-industrial MDV systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Адаптер для бытовых систем Daikin)",
+                "template_title": "ONOKOM AIR MD-3-MB-B (Адаптер для полупромышленных систем MDV)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
@@ -728,7 +632,8 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Outdoor air temperature": "Температура воздуха на улице",
+                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
+                "Outdoor heat exchanger temperature": "Температура внешнего теплообменника",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -736,7 +641,6 @@
                 "Show vanes as range": "Отображать жалюзи как ползунок",
                 "Horizontal vanes": "Горизонтальные жалюзи",
                 "Swing": "Качание",
-                "Vertical vanes": "Вертикальные жалюзи",
                 "Vanes swing": "Качание жалюзи",
                 "Stop": "Остановлены",
                 "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
@@ -747,14 +651,7 @@
                 "1 Speed": "1 Скорость",
                 "2 Speed": "2 Скорость",
                 "3 Speed": "3 Скорость",
-                "4 Speed": "4 Скорость",
-                "5 Speed": "5 Скорость",
-                "Quiet mode": "Режим тихий",
                 "Eco mode": "Режим эко",
-                "Turbo mode": "Режим турбо",
-                "Indication": "Индикация",
-                "Screen light": "Подсветка экрана",
-                "Screen low bright": "Ослабить яркость экрана",
                 "No": "Нет",
                 "Yes": "Да",
                 "Baud rate": "Скорость обмена",
@@ -771,8 +668,6 @@
                 "Serial": "Серийный номер",
                 "Reboot Device": "Перезагрузить устройство",
                 "Debug": "Диагностика",
-                "Target fan speed": "Целевая скорость вентилятора",
-                "Current fan speed": "Текущая скорость вентилятора",
                 "Temeperature correction": "Коррекция температуры",
                 "AC connected": "Кондиционер подключен"
             }
