--- a/templates/config-onokom-air-tcl-3-mb-b.json
+++ b/templates/config-onokom-air-tcl-3-mb-b.json
@@ -1,15 +1,15 @@
 {
     "title": "template_title",
-    "device_type": "ONOKOM-AIR-DK-1-MB-B",
+    "device_type": "ONOKOM-AIR-TCL-3-MB-B",
     "group": "g-air-conditioning",
     "hw": [
         {
-            "signature": "DK-1-MB-B"
+            "signature": "TCL-3-MB-B"
         }
     ],
     "device": {
-        "name": "ONOKOM-AIR-DK-1-MB-B",
-        "id": "ONOKOM-AIR-DK-1-MB-B",
+        "name": "ONOKOM-AIR-TCL-3-MB-B",
+        "id": "ONOKOM-AIR-TCL-3-MB-B",
         "groups": [
             {
                 "title": "General",
@@ -369,10 +369,10 @@
                 "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
             },
             {
-                "name": "Outdoor air temperature",
+                "name": "Indoor heat exchanger temperature",
                 "enabled": false,
                 "reg_type": "holding",
-                "address": 4,
+                "address": 23,
                 "type": "value",
                 "format": "s16",
                 "scale": 0.01,
@@ -388,7 +388,7 @@
                 "type": "range",
                 "format": "s16",
                 "min": 16,
-                "max": 32,
+                "max": 31,
                 "scale": 0.01,
                 "sporadic": true,
                 "group": "temperatureControl",
@@ -434,8 +434,8 @@
                 "address": 9,
                 "type": "range",
                 "format": "u16",
-                "min": 0,
-                "max": 1,
+                "min": 1,
+                "max": 8,
                 "sporadic": true,
                 "group": "vanes",
                 "condition": "Show_vanes_as_range==1"
@@ -554,47 +554,21 @@
                 "group": "additional"
             },
             {
+                "name": "Sleep mode",
+                "enabled": false,
+                "reg_type": "coil",
+                "address": 8,
+                "type": "switch",
+                "sporadic": true,
+                "group": "additional"
+            },
+            {
                 "name": "Screen light",
                 "reg_type": "coil",
                 "address": 2,
                 "type": "switch",
                 "sporadic": true,
                 "group": "indication"
-            },
-            {
-                "name": "Screen low bright",
-                "enabled": false,
-                "reg_type": "coil",
-                "address": 3,
-                "type": "switch",
-                "sporadic": true,
-                "group": "indication"
-            },
-            {
-                "name": "Target fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 31,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
-            },
-            {
-                "name": "Current fan speed",
-                "enabled": false,
-                "reg_type": "holding",
-                "address": 32,
-                "type": "range",
-                "min": 0,
-                "max": 200,
-                "sporadic": true,
-                "group": "debug",
-                "readonly": true,
-                "units": "rpm"
             },
             {
                 "name": "Temeperature correction",
@@ -705,10 +679,10 @@
         ],
         "translations": {
             "en": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Adapter for household Daikin systems)"
+                "template_title": "ONOKOM AIR TCL-3-MB-B (Adapter for semi industrial TCL systems)"
             },
             "ru": {
-                "template_title": "ONOKOM AIR DK-1-MB-B (Адаптер для бытовых систем Daikin)",
+                "template_title": "ONOKOM AIR TCL-3-MB-B (Адаптер для полупромышленных систем TCL)",
                 "General": "Основные режимы и функции",
                 "Active": "Состояние",
                 "Mode": "Режим",
@@ -728,7 +702,7 @@
                 "Temperature control": "Контроль температуры",
                 "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
                 "Indoor air temperature": "Температура воздуха в помещении",
-                "Outdoor air temperature": "Температура воздуха на улице",
+                "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
                 "Target temperature": "Целевая температура",
                 "Show thermostat state as range": "Отображать состояние термостата как ползунок",
                 "Thermostat state": "Состояние термостата",
@@ -752,9 +726,9 @@
                 "Quiet mode": "Режим тихий",
                 "Eco mode": "Режим эко",
                 "Turbo mode": "Режим турбо",
+                "Sleep mode": "Режим сна",
                 "Indication": "Индикация",
                 "Screen light": "Подсветка экрана",
-                "Screen low bright": "Ослабить яркость экрана",
                 "No": "Нет",
                 "Yes": "Да",
                 "Baud rate": "Скорость обмена",
@@ -771,8 +745,6 @@
                 "Serial": "Серийный номер",
                 "Reboot Device": "Перезагрузить устройство",
                 "Debug": "Диагностика",
-                "Target fan speed": "Целевая скорость вентилятора",
-                "Current fan speed": "Текущая скорость вентилятора",
                 "Temeperature correction": "Коррекция температуры",
                 "AC connected": "Кондиционер подключен"
             }
